Lincheck 3.6.